deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: churn-service
spec:
  selector:
    app: churn-ml
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
